--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Mr Medicine Tracker</title>
+    <title>Mr Health</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Track your health"
     />
    
     <!--
